--- a/Home/View/default/User/followList.html
+++ b/Home/View/default/User/followList.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src='__ROOT__/Home/Public/Js/jquery-1.7.2.min.js'></script>
 <script type="text/javascript" src='__ROOT__/Home/Public/Js/common.js'></script>
 <script type="text/javascript" src='__ROOT__/Home/Public/Js/nav.js'>
-    var delFollow = U('User/delFollow');
+    var delFollow = U('User/delFollows');
 </script>
 <!--==========顶部固定导行条==========-->
 <include file='Common:nav'/>
